--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<title>Tejas Rawal</title>
+	</head>
+	<body>
+		<h2>Hello World</h2>
+	</body>
+</html>
